# mycelium

./: .env_example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/: codecov.yaml  dependabot.yml  labeler.yml  pull_request_template.md
.github/actions/shared/load-config/: action.yml
.github/actions/shared/setup/: action.yml
.github/config/: test-config.yml
.github/workflows/: build.yaml  changes.yaml  ci-cd.yaml  labeler.yml  maintenance.yaml  release.yaml  tests.yaml
.github/workflows/reusable/: build.yaml  changes.yaml  tests.yaml  validate.yaml
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/api/: Dockerfile  entrypoint.sh  pyproject.toml
backend/api/app/: __init__.py  main.py
backend/api/app/assets/templates/: mysql.yaml  oracle.yaml  sftp.yaml
backend/api/app/crud/: data_contract.py  template.py
backend/api/app/database/: dsn.py  manager.py
backend/api/app/errors/: __init__.py
backend/api/app/errors/crud/: data_contract.py  template.py
backend/api/app/errors/database/: manager.py
backend/api/app/errors/routers/: data_contract.py  template.py
backend/api/app/errors/service/: template.py
backend/api/app/exceptions/: __init__.py
backend/api/app/exceptions/crud/: data_contract.py
backend/api/app/exceptions/database/: dsn.py
backend/api/app/exceptions/routers/: data_contract.py
backend/api/app/exceptions/utils/: config.py
backend/api/app/models/: data_contract.py
backend/api/app/routers/: data_contract.py  template.py
backend/api/app/schemas/data_contract/objects/: config_object.py  contact_object.py  data_contract.py  definition_object.py  example_object.py  field_object.py  info_object.py  model_object.py  quality_object.py  server_object.py  service_level_object.py  term_object.py
backend/api/app/schemas/data_contract/routes/: data_contract_create.py  data_contract_delete.py  data_contract_get.py  data_contract_list.py  data_contract_update.py
backend/api/app/schemas/template/objects/: array_field.py  array_item.py  boolean_field.py  field.py  number_field.py  object_field.py  password_field.py  select_field.py  tabs.py  template.py  text_area_field.py  text_field.py
backend/api/app/schemas/template/route/: template_list.py
backend/api/app/schemas/template/routes/: template_get.py  template_list.py
backend/api/app/services/: data_contract.py  template.py
backend/api/app/utils/: config.py  example_model.py  logger.py  tools.py
backend/api/tests/: conftest.py  test_data_contract_crud.py  test_database_manager.py  tools_test.py
backend/api/tests/crud/: test_data_contract_crud.py  test_template_crud.py
backend/api/tests/services/: test_data_contract_service.py  test_template_service.py
backend/app/: main.py
backend/database/: Dockerfile  entrypoint.sh
backend/keycloak/: Dockerfile
backend/keycloak/scripts/: entrypoint.sh  healthcheck.sh  keycloak_bootstrap.sh
backend/postgres/: Dockerfile
backend/scripts/: keycloak_bootstrap.sh
docs/: requirements.txt
examples/terraform-gcp/environments/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
examples/terraform-gcp/modules/cloud-run/: main.tf  outputs.tf  variables.tf
examples/terraform-gcp/modules/cloud-sql/: main.tf  outputs.tf  variables.tf
examples/terraform-gcp/modules/iam/: main.tf
examples/terraform-gcp/modules/vpc/: main.tf  outputs.tf  variables.tf
mycelium/: Dockerfile  entrypoint.sh  index.html  package.json
mycelium/config/: eslint.config.js  nginx.conf  vite.config.js  vue.config.js
mycelium/src/: App.vue  main.js
mycelium/src/components/chat/: ChatColumn.vue
mycelium/src/components/chat/components/: ResultBox.vue  ResultsList.vue  SearchBar.vue
mycelium/src/components/dataContract/: DataContract.vue
mycelium/src/components/dataContract/components/: DynamicSourceForm.vue  SubmitButton.vue
mycelium/src/components/listDataContracts/: ListDataContracts.vue
mycelium/src/components/navigation/: NavBar.vue
mycelium/src/components/sidePanel/: SidePanel.vue
mycelium/src/components/sidePanel/components/: CloseButton.vue
mycelium/src/router/: index.js
mycelium/src/services/: KeycloakService.js  auth.service.js
mycelium/src/utils/: config.template.js  constants.js
mycelium/src/views/auth/: Login.vue  Register.vue  SilentCheckSso.vue
mycelium/src/views/home/: Home.vue
scripts/: setup_env.sh
